Test command now echoes all of the args instead of just the first one

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-SWEATY_BOT_DISCORD_TOKEN=
+SWEATY_BOT_DISCORD_TOKEN=ODE1MTkzOTkwNDY2MzcxNjA0.YDo2kA.RLsU0zZsNuLSeet3fsg-jWc4UUI
+SWEATY_BOT_WARCRAFTLOGS_TOKEN=123
+SWEATY_BOT_DISCORD_PREFIX=^
